Fix form control overflow on modal dialogs
The rule for setting form control width to 100% was being overridden by the main stylesheet.

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -1382,8 +1382,11 @@ a.curs-editable-table-field img, a.curs-editable-table-long-field img
   filter: alpha(opacity=50);
 }
 
-.form-control, .help-block {
+help-block {
   width: auto;
+}
+
+.form-control, .help-block {
   display: inline;
 }
 
